analysis overview and minor changes in the structure

--- a/biblio.bib
+++ b/biblio.bib
@@ -379,5 +379,183 @@ year = {1918}
 	journal = {Physical Review D}
 }
 
+@techreport{ATLASRun2IntegratedLumi,
+      author ={{The ATLAS Collaboration}},
+      title         = "{Luminosity determination in $pp$ collisions at $\sqrt{s}=13$ TeV using the ATLAS detector at the LHC}",
+      reportNumber = {ATLAS-CONF-2019-021},
+    month = {6},
+    institution={CERN},
+    year = {2019}
+}
 
+@article{ATLASRun2DataTaking,
+	doi = {10.1088/1748-0221/15/04/p04003},
+	url = {https://doi.org/10.1088%2F1748-0221%2F15%2F04%2Fp04003},
+	year = 2020,
+	month = {apr},
+	publisher = {{IOP} Publishing},
+	volume = {15},
+	number = {04},
+	pages = {P04003--P04003},
+	title = {{ATLAS data quality operations and performance for 2015-2018 data-taking}},
+	author ={{The ATLAS Collaboration}},
+	journal = {Journal of Instrumentation}
+}
+
+@article{ATLASLuminosityDetector,
+doi = {10.1088/1748-0221/13/07/P07017},
+url = {https://dx.doi.org/10.1088/1748-0221/13/07/P07017},
+year = {2018},
+month = {jul},
+publisher = {},
+volume = {13},
+number = {07},
+pages = {P07017},
+author = {{G. Avoni et al.}},
+title = {{The new LUCID-2 detector for luminosity measurement and  monitoring  in ATLAS}},
+journal = {Journal of Instrumentation}
+}
+
+@article{GEANT4,
+    author = "Agostinelli, S. and others",
+    collaboration = "GEANT4",
+    title = "{GEANT4--a simulation toolkit}",
+    reportNumber = "SLAC-PUB-9350, FERMILAB-PUB-03-339, CERN-IT-2002-003",
+    doi = "10.1016/S0168-9002(03)01368-8",
+    journal = "Nucl. Instrum. Meth. A",
+    volume = "506",
+    pages = "250--303",
+    year = "2003"
+}
+
+@article{EventGenWithSherpa,
+	doi = {10.21468/scipostphys.7.3.034},
+	url = {https://doi.org/10.21468%2Fscipostphys.7.3.034},
+	year = 2019,
+	month = {sep},
+	publisher = {Stichting {SciPost}},
+	volume = {7},
+	number = {3},
+	author = {Enrico Bothmann and Gurpreet Singh Chahal and Stefan Höche and Johannes Krause and Frank Krauss and Silvan Kuttimalai and Sebastian Liebschner and Davide Napoletano and Marek Schönherr and Holger Schulz and Steffen Schumann and Frank Siegert},
+	title = {{Event generation with Sherpa 2.2}},
+	journal = {{SciPost} Physics}
+}
+
+@article{PDFForRunII,
+	doi = {10.1007/jhep04(2015)040},
+	url = {https://doi.org/10.1007%2Fjhep04%282015%29040},
+	year = 2015,
+	month = {apr},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {2015},
+	number = {4},
+	author = {Richard D. Ball and   and Valerio Bertone and Stefano Carrazza and Christopher S. Deans and Luigi Del Debbio and Stefano Forte and Alberto Guffanti and Nathan P. Hartland and Jos{\'{e}} I. Latorre and Juan Rojo and Maria Ubiali},
+	title = {{Parton distributions for the LHC run II}},
+	journal = {Journal of High Energy Physics}
+}
+
+@article{SherpaPS,
+doi = {10.1088/1126-6708/2008/03/038},
+url = {https://dx.doi.org/10.1088/1126-6708/2008/03/038},
+year = {2008},
+month = {mar},
+publisher = {},
+volume = {2008},
+number = {03},
+pages = {038},
+author = {S. Schumann and  F. Krauss},
+title = {A parton shower algorithm based on Catani-Seymour dipole factorisation},
+journal = {Journal of High Energy Physics}
+}
+
+@article{PSMatching,
+author = {{ Höche, S., Krauss, F., Schönherr, M. et al.}},
+title = {{  QCD matrix elements + parton showers. The NLO case}},
+journal ={ J. High Energ. Phys. },
+volume = {2013},
+number ={27},
+year ={2013}, 
+url = { https://doi.org/10.1007/JHEP04(2013)027}
+}
+
+@article{MADGRAPHNLO,
+	doi = {10.1007/jhep07(2014)079},
+	url = {https://doi.org/10.1007%2Fjhep07%282014%29079},
+	year = 2014,
+	month = {jul},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {2014},
+	number = {7},
+	author = {{J. Alwall and R. Frederix and S. Frixione and V. Hirschi and F. Maltoni and O. Mattelaer and H.-S. Shao and T. Stelzer and P. Torrielli and M. Zaro}},
+	title = {{The automated computation of tree-level and next-to-leading order differential cross sections, and their matching to parton shower simulations}},
+	journal = {Journal of High Energy Physics}
+}
+
+@article{Pythia8,
+	doi = {10.1016/j.cpc.2008.01.036},
+	url = {https://doi.org/10.1016%2Fj.cpc.2008.01.036},
+	year = 2008,
+	month = {jun},
+	publisher = {Elsevier {BV}},
+	volume = {178},
+	number = {11},
+	pages = {852--867},
+	author = {{Torbjörn Sjöstrand and Stephen Mrenna and Peter Skands}},
+	title = {{A brief introduction to {PYTHIA} 8.1}},
+	journal = {Computer Physics Communications}
+}
+
+@article{PowhegV2,
+	doi = {10.1007/jhep03(2014)141},
+	url = {https://doi.org/10.1007%2Fjhep03%282014%29141},
+	year = 2014,
+	month = {mar},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {2014},
+	number = {3},
+	author = {{Barbara Jäger and Alexander Karlberg and Giulia Zanderighi}},
+	title = {{Electroweak ZZjj production in the Standard Model and beyond in the POWHEG-BOX V2}}, 
+	journal = {Journal of High Energy Physics}
+}
+
+@article{Sherpa220,
+	doi = {10.1088/1126-6708/2001/11/063},
+	url = {https://doi.org/10.1088%2F1126-6708%2F2001%2F11%2F063},
+	year = 2001,
+	month = {nov},
+	journal = {Journal of High Energy Physics},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {2001},
+	number = {11},
+	pages = {063--063},
+	author = {{Stefano Catani and Frank Krauss and Bryan R Webber and Ralf Kuhn}}, 
+	title = {QCD  Matrix Elements + Parton Showers}},
+}
+
+@article{PowhegPythia,
+    author = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter Z.",
+    title = "{A Brief Introduction to PYTHIA 8.1}",
+    eprint = "0710.3820",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-LCGAPP-2007-04, LU-TP-07-28, FERMILAB-PUB-07-512-CD-T",
+    doi = "10.1016/j.cpc.2008.01.036",
+    journal = "Comput. Phys. Commun.",
+    volume = "178",
+    pages = "852--867",
+    year = "2008"
+}
+
+@article{AngularFrameDef,
+	doi = {10.1103/physrevd.81.075022},
+	url = {https://doi.org/10.1103%2Fphysrevd.81.075022},
+	year = 2010,
+	month = {apr},
+	publisher = {American Physical Society ({APS})},
+	volume = {81},
+	number = {7},
+	author = {{Yanyan Gao and Andrei V. Gritsan and Zijin Guo and Kirill Melnikov and Markus Schulze and Nhan V. Tran}},
+	title = {{Spin determination of single-produced resonances at hadron colliders}},
+	journal = {Physical Review D}
+}
 %% Haven't been used can delete later
