--- a/sections/AnalysisOverview.tex
+++ b/sections/AnalysisOverview.tex
@@ -1,23 +1,8 @@
 \part {\LARGE{Analysis Overview}}
 \label{sec:AnalysisOverview}
-This section discussed the overview of the analysis
 
 \section{Goals}
 \label{sec:Analysis_Goals}
-\input{sections/Analysis_Goals}
 
-\section{Datasets and Monte Carlo Simulation}
-\label{sec:DataSetAndMonteCarlo}
-\input{sections/Analysis_DataSetAndMonteCarlo}
-
-\section{Phase Space Definition}
-\label{sec:FidSel}
-\input{sections/Analysis_FiducialSelection}
-
-\section{Object and Event Selection}
-\label{sec:ObjectEventSel}
-\input{sections/Analysis_ObjectAndEventSelection}
-
-\section{Definition of Measured Observables}
-\label{sec:Obs}
-\input{sections/Analysis_Obs}
+The primary goal of the analysis is to measure the differential cross-sections of the kinematic observables that are sensitive to the EWK $ZZjj \rightarrow 4\ell jj$ production mode. The differential cross-sections measured in VBS-enhanced phase space are used in the precision study of the SM $4\ell jj$ production and to put constrain on the BSM physics. For simpler re-interpretation in the future without ATLAS detector simulations, the differential cross-sections are measured at a particle level using an unfolding technique, which corrects for the detector effects. The details of the unfolding to extrapolate the particle-level yield from detector-level yield will be discussed in section \ref{sec:Unfolding}. The unfolded cross-sections shown in section \ref{sec:DifferentialxS} are then used to constrain the effect of BSM in a model-independent framework using the Effective Field Theory (EFT) approach which will be discussed in section \ref{sec:EFT}. 
+  
