--- a/sections/LHC.tex
+++ b/sections/LHC.tex
@@ -5,7 +5,7 @@
 \label{sec:ATLAS}
 \input{sections/LHC_ATLAS}
 
-\section{ Particle Reconstruction} 
+\section{ Physics Object Reconstruction} 
 \label{sec:ParticleReconstruction}
 \input{sections/LHC_ObjectReconstruction}
 
