--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -1,22 +1,29 @@
 \begin{itemize}
 \item{BSM: Beyond the Standard Model}
 \item {C: Charge conjugation}
-\item{P: Parity}
-\item{T: Time-reversal}
+\item{EFT: Effective Field Theory}
 \item{EWK: Electroweak}
+\item{FSR: Final State Radiation}
+\item{GRL: Good Run List}
 \item{H: Weak Hypercharge}
 \item{ I: Weak Isospin}
 \item{$\mathcal{L_{SM}}$: Lagrangian}
+\item{LB: Luminosity Block}
 \item{LH:  Left Handed}
 \item{MC: Monte Carlo}
+\item{P: Parity}
+\item{PDF: Parton Distribution Function}
 \item{Q: Electric Charge}
 \item{QGC: Quartic Gauge Coupling}
 \item{QED: Quantum Electrodynamics}
 \item{QCD: Quantum Chromodynamics}
 \item{$(\mathcal{P})$: Poincare group}
 \item{RH: RightHanded}
+\item{SF-OC: Same-flavor, Opposite-charged} 
 \item{SM: Standard Model}
+\item{T: Time-reversal}
 \item{TGC: Triple Gauge Coupling}
+\item{TTVA: Track-to-vertex association}
 \item{VBS: Vector Boson Scattering}
 \item{VEV: Vacuum Expectation Value}
 \end{itemize}
