--- a/sections/theory_EWkProcess.tex
+++ b/sections/theory_EWkProcess.tex
@@ -1,17 +1,23 @@
 \section{ Electroweak Diboson Physics }	
 \label{sec:EWKPheno}
 
-In LHC, two types of physics processes, the QCD production at the order $\alpha_{S}^{2} \alpha_{EWK}^{4}$ and the EWK production at order $\alpha_{EWK}^6$ contribute to the production of di-$Z$ bosons in an association of two jets ($ZZjj$) \cite{CMSRun2ZZjj}. Figure \ref{fig:ZZjjFeynmanDiag_QCD} shows the Feynman diagram at leading order for the QCD ZZjj process, whereas figure \ref{fig:ZZjjFeynmanDiag_EWk} shows the Feynman diagram at leading order for the EWK production of ZZjj \cite{PowhegV2ZZjj}. The EWK production consists of two sets of interactions, first, the Vector Boson Scattering processes involving either triple (figure \ref{fig:ZZjjFeynmanDiag_EWk_a}) or quartic (figure \ref{fig:ZZjjFeynmanDiag_EWk_b}) self-interactions of the gauge-bosons, and second the diagrams featuring the Higgs bosons (figure \ref{fig:ZZjjFeynmanDiag_EWk_c} $\&$ \ref{fig:ZZjjFeynmanDiag_EWk_d}). The scattering amplitudes of the VBS processes involving longitudinally polarized vector bosons, grow quadratically with the center of mass energy ($\sqrt{s}$), eventually violating the unitarity bounds. The precise SM interference between the Higgs-featured process and the VBS process restores the unitarity  \cite{VBSWWWW}. As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ bosons get their masses via the BEH mechanism through EWSB. As a consequence of EWSB, the $W$ and $Z$ bosons acquire an additional degree of freedom (the longitudinal polarization mode) whose scattering interfere with the Higgs featured processes. Thus, the study of electroweak production of the di-$Z$ bosons in association with two jets provides a direct probe of the EWSB, which is at the heart of the SM \cite{CMSRun2ZZjj}. 
+In LHC, two types of physics processes, the QCD production at the order $\alpha_{S}^{2} \alpha_{EWK}^{4}$ and the EWK production at order $\alpha_{EWK}^6$ contribute to the production of di-$Z$ bosons in an association of two jets ($ZZjj$) \cite{CMSRun2ZZjj}. Figures \ref{fig:ZZjjFeynmanDiag_QCD_qq} and \ref{fig:ZZjjFeynmanDiag_QCD_gg} shows the Feynman diagram at leading order for the QCD ZZjj process, whereas figure \ref{fig:ZZjjFeynmanDiag_EWk} shows the Feynman diagram at leading order for the EWK production of ZZjj \cite{PowhegV2ZZjj}. The EWK production consists of two sets of interactions, first, the Vector Boson Scattering processes involving either triple (figure \ref{fig:ZZjjFeynmanDiag_EWk_a}) or quartic (figure \ref{fig:ZZjjFeynmanDiag_EWk_b}) self-interactions of the gauge-bosons, and second the diagrams featuring the Higgs bosons (figure \ref{fig:ZZjjFeynmanDiag_EWk_c} $\&$ \ref{fig:ZZjjFeynmanDiag_EWk_d}). The scattering amplitudes of the VBS processes involving longitudinally polarized vector bosons, grow quadratically with the center of mass energy ($\sqrt{s}$), eventually violating the unitarity bounds. The precise SM interference between the Higgs-featured process and the VBS process restores the unitarity  \cite{VBSWWWW}. As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ bosons get their masses via the BEH mechanism through EWSB. As a consequence of EWSB, the $W$ and $Z$ bosons acquire an additional degree of freedom (the longitudinal polarization mode) whose scattering interfere with the Higgs featured processes. Thus, the study of electroweak production of the di-$Z$ bosons in association with two jets provides a direct probe of the EWSB, which is at the heart of the SM \cite{CMSRun2ZZjj}. 
 
 \begin{figure}[!htbp]
   \begin{center}
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjqq.pdf}
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjqg.pdf}
-  \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjgg.pdf}\\
+  \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjgg.pdf}
+   \end{center}
+  \caption{Typical diagrams of LO $qq$ and $gg$ induced QCD $\alpha_{S}^2 \alpha_{EWK}^{4}$ production of $ZZjj$. \label{fig:ZZjjFeynmanDiag_QCD_qq}}
+ \end{figure} 
+ 
+\begin{figure}[!htbp]
+  \begin{center}
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjbox.pdf}
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjggH.pdf}\\
   \end{center}
-  \caption{Typical diagrams for the QCD $\alpha_{S}^2\alpha_{EWK}^{4}$ production of $ZZjj$. \label{fig:ZZjjFeynmanDiag_QCD}}
+  \caption{Typical diagrams for LO $gg$ loop induced the QCD $\alpha_{S}^4\alpha_{EWK}^{4}$ production of $ZZjj$. \label{fig:ZZjjFeynmanDiag_QCD_gg}}
  \end{figure}
  
 \begin{figure}[ht]
@@ -43,7 +49,7 @@ In LHC, two types of physics processes, the QCD production at the order $\alpha_
 \label{fig:ZZjjFeynmanDiag_EWk}
 \end{figure}
 
-The triple and quartic self-interactions of the gauge bosons arise from the non-Abelian structure of $SU(2)$ in the kinetic term $ \frac{1}{4} W^{a}_{\mu\nu} W^{\mu\nu}_{a}$ of the EWK Lagrangian in equation \ref{eqn:EWKLagrangian1}. Implementing the values of the field strength tensor $W^{a}_{\mu\nu}$ from equation \ref{eqn:SU2FST}, the relations of $W_{\mu}^{\pm}$ fields in equation \ref{eqn:RealWBosons}, and the relations of neutral gauge fields in equation \ref{eqn:NeutralGaugeBosons}, the triple and quartic self interaction terms become, 
+The triple and quartic self-interactions of the gauge bosons arise from the square of the non-Abelian structure of $SU(2)$ in the kinetic term $ \frac{1}{4} W^{a}_{\mu\nu} W^{\mu\nu}_{a}$ of the EWK Lagrangian in equation \ref{eqn:EWKLagrangian1}. Implementing the values of the field strength tensor $W^{a}_{\mu\nu}$ from equation \ref{eqn:SU2FST}, the relations of $W_{\mu}^{\pm}$ fields in equation \ref{eqn:RealWBosons}, and the relations of neutral gauge fields in equation \ref{eqn:NeutralGaugeBosons}, the triple and quartic self interaction terms become, 
 
 \begin{equation}
 \mathcal{L}_{3} = ie_{V=\gamma,Z} [ W^{+}_{\mu\nu} W^{-\mu} V^{\nu} - W^{-}_{\mu\nu} W^{+\mu} V^{\nu} + W_{\mu}^{+}W_{\nu}^{-}V^{\mu\nu} ] 
