--- a/sections/AnalysisStrategy.tex
+++ b/sections/AnalysisStrategy.tex
@@ -1,7 +1,7 @@
 \part {\LARGE{Analysis Strategy}}
 \label{sec:Analysis Strategy}
 
-\section{Background Estimation}
+\section{Background}
 \label{sec:Bkg}
 \input{sections/Analysis_Background}
 
